hphp/hack/test/typecheck/shape_idx_missing_field.php.exp
File "shape_idx_missing_field.php", line 4, characters 10-29:
Invalid return type (Typing[4110])
File "shape_idx_missing_field.php", line 3, characters 40-40:
Expected T
File "shape_idx_missing_field.php", line 3, characters 23-32:
But got nonnull because the field 'x' may be set to any type in this shape
