hphp/hack/test/typecheck/shape_idx_missing_field.php
<?hh

function type_hole<T>(shape(...) $s): ?T {
  return Shapes::idx($s, 'x');
}
